<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.happydiary.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/write_down"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/put_name"
            android:inputType="textAutoCorrect"
            android:maxLength="14"
            android:textColor="#00bcd4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/this_app"
            android:textColor="@android:color/black"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/first_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#00796b"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/first_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="answer #1"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#00bcd4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/second_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#00796b"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/second_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="answer #2"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#00bcd4"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/third_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#00796b"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/third_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="answer #3"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#00bcd4"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/fourth_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#00796b"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fourth_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="answer #4"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#00bcd4"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/fifth_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#00796b"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fifth_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="answer #5"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#00bcd4"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="askQuestion"
            android:text="@string/questions" />

        <TextView
            android:id="@+id/heute_war"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/heute_war"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="sendQuestion"
            android:text="@string/send"
            android:layout_gravity="right" />


    </LinearLayout>
</ScrollView>